--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.7.1",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-webview": "13.8.6"
+    "react-native-webview": "13.8.6",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
